--- a/app/explore2/settings.example.conf
+++ b/app/explore2/settings.example.conf
@@ -5,6 +5,7 @@ export CONZEPT_SERVICES_DIR='/var/www/html/services'
 export CONZEPT_VERSION='0.50.001'
 export CONZEPT_CORS_PROXY_WHITELIST='upload.wikimedia.org, commons.wikimedia.org, commons.m.wikimedia.org, maps.wikimedia.org'
 export CONZEPT_YOUTUBE_API_KEY=''
+export CONZEPT_LOCALES='ar, ceb, en, es, de, fr, hi, ja, nl, pt, ru, sv, zh'
 
 export CONZEPT_COMMON_HTML_INCLUDE="<link href=\"${CONZEPT_WEB_BASE}/app/explore2/node_modules/@fortawesome/fontawesome-free/css/all.min.css?v5.14=\" rel=\"stylesheet\" type=\"text/css\"> <link  href=\"${CONZEPT_WEB_BASE}/app/explore2/dist/css/conzept/common.css?v${CONZEPT_VERSION}\" rel=\"stylesheet\" type=\"text/css\"> <script src=\"${CONZEPT_WEB_BASE}/app/explore2/dist/core/env.js?v${CONZEPT_VERSION}\"></script><script src=\"${CONZEPT_WEB_BASE}/app/explore2/dist/core/utils.js?v${CONZEPT_VERSION}\"></script><script src=\"${CONZEPT_WEB_BASE}/app/explore2/node_modules/jquery/dist/jquery.min.js?v3.6.0\"></script><a href=\"javascript:void(0)\" id=\"fullscreenToggle\" onclick=\"document.toggleFullscreen()\" class=\"global-actions\"><i id=\"fullscreenIcon\" title=\"fullscreen toggle\" class=\"fas fa-expand-arrows-alt\"></i></a><script>document.toggleFullscreen = function() { if (screenfull.enabled) { screenfull.toggle(); } return 0; };</script>"
 
