--- a/app/explore2/settings.example.conf
+++ b/app/explore2/settings.example.conf
@@ -3,6 +3,7 @@ export CONZEPT_WEB_BASE=''
 export CONZEPT_WEB_DIR='/var/www/html'
 export CONZEPT_SERVICES_DIR='/var/www/html/services'
 export CONZEPT_VERSION='0.50.001'
+export CONZEPT_FONT='Hind'
 export CONZEPT_CORS_PROXY_WHITELIST='upload.wikimedia.org, commons.wikimedia.org, commons.m.wikimedia.org, maps.wikimedia.org'
 export CONZEPT_YOUTUBE_API_KEY=''
 export CONZEPT_LOCALES='ar, ceb, en, es, de, fr, hi, ja, nl, pt, ru, sv, zh'
