--- a/conf/nginx-site.conf
+++ b/conf/nginx-site.conf
@@ -10,7 +10,7 @@
     }
 
 server {
-    listen 443 ssl; ## Listen for ipv4; this line is default and implied
+    listen 443 ssl http2; ## Listen for ipv4; this line is default and implied
 
     # Make site accessible from http://localhost/
     # server_name localhost;
@@ -20,8 +20,8 @@ server {
 
     charset utf-8;
     server_name $CONZEPT_DOMAIN;
-    ssl_certificate /etc/letsencrypt/live/$CONZEPT_CERT_NAME/fullchain.crt;
-    ssl_certificate_key  /etc/letsencrypt/live/$CONZEPT_CERT_NAME/privkey;
+    ssl_certificate /etc/letsencrypt/live/$CONZEPT_CERT_NAME/fullchain.pem;
+    ssl_certificate_key  /etc/letsencrypt/live/$CONZEPT_CERT_NAME/privkey.pem;
     include /etc/letsencrypt/options-ssl-nginx.conf;
     ssl_dhparam /etc/letsencrypt/ssl-dhparams.pem;
     location / {
