--- a/conf/nginx-site.conf
+++ b/conf/nginx-site.conf
@@ -1,13 +1,13 @@
-    server {
-        listen 80;
-        server_name $CONZEPT_DOMAIN;
-        location /.well-known/acme-challenge/ {
-            root /var/www/certbot;
-        }
-        location / {
-            return 301 https://$host$request_uri;
-        }
+server {
+    listen 80;
+    server_name $CONZEPT_DOMAIN;
+    location ^~ /.well-known/acme-challenge/ {
+        root /var/www/certbot;
     }
+    location / {
+        return 301 https://$host$request_uri;
+    }
+}
 
 server {
     listen 443 ssl http2; ## Listen for ipv4; this line is default and implied
