--- a/conf/php-fpm-pool.conf
+++ b/conf/php-fpm-pool.conf
@@ -1,20 +1,14 @@
 [www]
 listen = 127.0.0.1:9000
-
+user = www-data
+group = www-data
 request_terminate_timeout = 120s
 
 pm = ondemand
-pm.max_children = {{PHP_MAX_CHILDREN}}
+pm.max_children = 5
 pm.process_idle_timeout = 10s
 pm.max_requests = 500
 chdir = /
-
-env[DB_DRIVER] = $DB_DRIVER
-env[DB_HOST] = $DB_HOST
-env[DB_DATABASE] = $DB_DATABASE
-env[DB_USERNAME] = $DB_USERNAME
-env[DB_PASSWORD] = $DB_PASSWORD
-env[CACHE_DRIVER] = $CACHE_DRIVER
 
 catch_workers_output = yes
 access.log = /dev/stdout
