--- a/app/explore2/settings.example.conf
+++ b/app/explore2/settings.example.conf
@@ -7,7 +7,7 @@ export CONZEPT_INDICATORS_VERSION='0.01'
 export CONZEPT_FONT='Hind'
 export CONZEPT_CORS_PROXY_WHITELIST='upload.wikimedia.org, commons.wikimedia.org, commons.m.wikimedia.org, maps.wikimedia.org'
 export CONZEPT_LOCALES='ar, ceb, de, en, es, fr, hi, it, ja, nl, pt, ru, sv, zh, uk, bn, id, ur, mr, te, tr, ta, ko, vi, ha, fa, sw, da, no, bn, ca, sr, fi, hu, cs, hr'
-export CONZEPT_AI_TUTORS='default, teacher, historian, scientist, philosopher, mathematician, chemist, economist, politician, artist, travel-guide, statistician, nutritionist, psychologist, legislator, theologian, poet, storyteller, biologist, doctor, investor, lifecoach, entrepreneur, farmer, ecologist, military-expert, financial-expert, engineer, professor, demographer, social-scientist, linguist'
+export CONZEPT_AI_TUTORS='quizzer, default, teacher, historian, scientist, philosopher, mathematician, chemist, economist, politician, artist, travel-guide, statistician, nutritionist, psychologist, legislator, theologian, poet, storyteller, biologist, doctor, investor, lifecoach, entrepreneur, farmer, ecologist, military-expert, financial-expert, engineer, professor, demographer, social-scientist, linguist'
 
 export CONZEPT_YOUTUBE_API_KEY=''
 
