--- a/conf/nginx-site.conf
+++ b/conf/nginx-site.conf
@@ -28,35 +28,29 @@ server {
         try_files $uri /index.php$is_args$args;
     }
 
-    location /app/proxy {
+    location /app/proxy/ {
         # command: conzept-api-proxy.sh
-        proxy_pass http://127.0.0.1:50001;
+        proxy_pass http://127.0.0.1:50001/;
         proxy_set_header Host $host;
         proxy_set_header X-Real-IP $remote_addr;
         proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
     }
 
-    location /app/cors {
+    location /app/cors/ {
         # command: npm start allOrigins/app.js
-        proxy_pass http://127.0.0.1:1458;
+        proxy_pass http://127.0.0.1:1458/;
         proxy_set_header Host $host;
         proxy_set_header X-Real-IP $remote_addr;
         proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
     }
 
-    location /app/tree {
-        proxy_pass http://127.0.0.1:3000;
+    location /app/tree/ {
+        proxy_pass http://127.0.0.1:3000/;
         proxy_set_header Host $host;
         proxy_set_header X-Real-IP $remote_addr;
         proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
     }
 
-    location /app/europeana {
-        proxy_pass http://127.0.0.1:3001;
-        proxy_set_header Host $host;
-        proxy_set_header X-Real-IP $remote_addr;
-        proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
-    }
 
     # Cache images
     location ~* .(jpg|jpeg|png|gif|ico|css|js|ttf|svg)$ {
