--- a/conf/supervisord.conf
+++ b/conf/supervisord.conf
@@ -16,6 +16,10 @@ supervisor.rpcinterface_factory = supervisor.rpcinterface:make_main_rpcinterface
 serverurl=unix:///var/run/supervisor.sock ; use a unix:// URL  for a unix socket
 
 [program:nginx]
+# run as user www-data and group www-data
+# user=www-data
+# group=www-data
+
 command=/usr/sbin/nginx
 stdout_events_enabled=true
 stderr_events_enabled=true
@@ -36,25 +40,32 @@ stderr_logfile=/dev/stderr
 
 # %(ENV_YOUR_VAR)s
 
-# [program:json-proxy]
-# command=/bin/sh -c '%(ENV_CONZEPT_SERVICES_DIR)s/json-proxy/bin/json-proxy -p 50001 -c %(ENV_CONZEPT_SERVICES_DIR)s/json-proxy.json
-# catch_workers_output = Yes
-# stdout_events_enabled=true
-# stderr_events_enabled=true
-# stdout_logfile_maxbytes=0
-# stderr_logfile_maxbytes=0
-# stdout_logfile=/dev/stdout
-# stderr_logfile=/dev/stderr
+[program:json-proxy]
+command=/bin/sh -c '%(ENV_CONZEPT_SERVICES_DIR)s/json-proxy/bin/json-proxy -p 50001 -c %(ENV_CONZEPT_SERVICES_DIR)s/json-proxy.json'
+catch_workers_output = Yes
+stdout_events_enabled=true
+stderr_events_enabled=true
+stdout_logfile_maxbytes=0
+stderr_logfile_maxbytes=0
+stdout_logfile=/dev/stdout
+stderr_logfile=/dev/stderr
 
-# [program:php]
-# command=/usr/sbin/php-fpm7 -c /etc/php7/fpm/pool.d/www.conf
-# catch_workers_output = Yes
-# stdout_events_enabled=true
-# stderr_events_enabled=true
-# stdout_logfile_maxbytes=0
-# stderr_logfile_maxbytes=0
-# stdout_logfile=/dev/stdout
-# stderr_logfile=/dev/stderr
+[program:allorigins]
+command=/bin/sh -c 'cd "$CONZEPT_SERVICES_DIR/allorigins" && npm start app.js'
+catch_workers_output = Yes
+stdout_events_enabled=true
+stderr_events_enabled=true
+stdout_logfile_maxbytes=0
+stderr_logfile_maxbytes=0
+stdout_logfile=/dev/stdout
+stderr_logfile=/dev/stderr
 
-
-
+[program:entitree]
+command=/var/www/html/services/entitree/start.sh
+catch_workers_output = Yes
+stdout_events_enabled=true
+stderr_events_enabled=true
+stdout_logfile_maxbytes=0
+stderr_logfile_maxbytes=0
+stdout_logfile=/dev/stdout
+stderr_logfile=/dev/stderr
