nginx changes and fixing bugs in shell scripts

--- a/conf/nginx-site.conf
+++ b/conf/nginx-site.conf
@@ -1,6 +1,6 @@
 server {
     listen 80;
-    server_name $CONZEPT_DOMAIN;
+    server_name locahost;
     location ^~ /.well-known/acme-challenge/ {
         root /var/www/certbot;
     }
@@ -16,16 +16,84 @@ server {
     # server_name localhost;
     root /var/www/html;
 
-    index index.php;
+    index index.php index.html;
 
     charset utf-8;
-    server_name $CONZEPT_DOMAIN;
-    ssl_certificate /etc/letsencrypt/live/$CONZEPT_CERT_NAME/fullchain.pem;
-    ssl_certificate_key  /etc/letsencrypt/live/$CONZEPT_CERT_NAME/privkey.pem;
+    server_name locahost;
+    ssl_certificate /etc/letsencrypt/live/locahost/fullchain.pem;
+    ssl_certificate_key  /etc/letsencrypt/live/locahost/privkey.pem;
     include /etc/letsencrypt/options-ssl-nginx.conf;
     ssl_dhparam /etc/letsencrypt/ssl-dhparams.pem;
+
+
+    # HTTP BYTE RANGE header
+    add_header Accept-Ranges bytes;
+
+    ### SECURITY HEADERS ###
+
+    # CORS
+    add_header Access-Control-Allow-Origin *;
+
+    # CSP
+    # add_header Content-Security-Policy "default-src 'self' * https://maxcdn.bootstrapcdn.com ... ";
+
+    # HSTS
+    add_header Strict-Transport-Security "max-age=31536000" always;
+
+    # X-XSS
+    add_header X-XSS-Protection "1; mode=block";
+
+    # X-Content
+    add_header X-Content-Type-Options "nosniff";
+
+    # Permissions-Policy
+    add_header Permissions-Policy "interest-cohort=()";
+
+    # mime types for fonts and other resources
+
+    # Cache control
+    location ~* \.(woff|woff2|ttf|otf|eot|ico|png|jpg|gif|svg|css|js|json)$ {
+    expires 30d;
+    add_header Vary Accept-Encoding;
+    }
+
+    # gzip compression
+    gzip on;
+    gzip_disable "msie6";
+    gzip_vary on;
+    gzip_proxied any;
+    gzip_comp_level 6;
+    gzip_buffers 16 8k;
+    gzip_http_version 1.1;
+    gzip_types text/plain text/css application/json application/x-javascript text/xml application/xml application/xml+rss text/javascript;
+
+    # Block /services access
+    location /services {
+        return 403;
+    }
+
+    # Default redirect to /explore
+    location = / {
+        return 301 /explore;
+    }
+
+    # Rewrite explore to /app/explore2/index.php
+    location ~ ^/explore(.*)$ {
+        rewrite ^/explore(.*)#(.*)$ /app/explore2/index.php?$1#$2 last;
+        rewrite ^/explore(.*)$ /app/explore2/index.php?$1 last;
+    }
+    
+    location ~ ^/app/wikipedia/(.*) {
+        try_files $uri/index.html $uri $uri/ =404;
+    }
+
     location / {
         try_files $uri /index.php$is_args$args;
+    }
+
+
+    location /app/ {
+        alias /var/www/html/app/;
     }
 
     location /app/proxy/ {
