--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -13,14 +13,15 @@ services:
     #   - conzept
   conzept:
     container_name: conzept
-    env_file:
-      - .env
+    # env_file:
+    #   - .env
     build:
       context: .
     volumes:
       - sslvolume:/etc/ssl
       - ./data/certbot/conf:/etc/letsencrypt/
       - ./data/certbot/www:/var/www/certbot
+      - ./app:/var/www/html/app
     ports:
       - 80:80
       - 443:443
