--- a/settings.conf.example
+++ b/settings.conf.example
@@ -1,8 +1,8 @@
 export CONZEPT_HOSTNAME=''
 export CONZEPT_EMAIL=''
 export CONZEPT_WEB_BASE=''
-export CONZEPT_WEB_DIR='/var/www/html/conze.pt'
-export CONZEPT_SERVICES_DIR='/var/www/html/conze.pt/services'
+export CONZEPT_WEB_DIR='/var/www/html'
+export CONZEPT_SERVICES_DIR='/var/www/html/services'
 export CONZEPT_VERSION='0.51.313'
 export CONZEPT_INDICATORS_VERSION='0.219'
 export CONZEPT_FONT='Hind'
