changed to dynamic domain instead of localhost

--- a/conf/nginx-site.conf
+++ b/conf/nginx-site.conf
@@ -1,6 +1,6 @@
 server {
     listen 80;
-    server_name locahost;
+    server_name $CONZEPT_DOMAIN;
     location ^~ /.well-known/acme-challenge/ {
         root /var/www/certbot;
     }
@@ -16,12 +16,12 @@ server {
     # server_name localhost;
     root /var/www/html;
 
-    index index.php index.html;
+    index index.html index.php;
 
     charset utf-8;
-    server_name locahost;
-    ssl_certificate /etc/letsencrypt/live/locahost/fullchain.pem;
-    ssl_certificate_key  /etc/letsencrypt/live/locahost/privkey.pem;
+    server_name $CONZEPT_DOMAIN;
+    ssl_certificate /etc/letsencrypt/live/$CONZEPT_CERT_NAME/fullchain.pem;
+    ssl_certificate_key  /etc/letsencrypt/live/$CONZEPT_CERT_NAME/privkey.pem;
     include /etc/letsencrypt/options-ssl-nginx.conf;
     ssl_dhparam /etc/letsencrypt/ssl-dhparams.pem;
 
@@ -82,7 +82,7 @@ server {
         rewrite ^/explore(.*)#(.*)$ /app/explore2/index.php?$1#$2 last;
         rewrite ^/explore(.*)$ /app/explore2/index.php?$1 last;
     }
-    
+
     location ~ ^/app/wikipedia/(.*) {
         try_files $uri/index.html $uri $uri/ =404;
     }
