--- a/settings.conf.example
+++ b/settings.conf.example
@@ -1,8 +1,8 @@
 export CONZEPT_HOSTNAME=''
 export CONZEPT_EMAIL=''
 export CONZEPT_WEB_BASE=''
-export CONZEPT_WEB_DIR='/var/www/html.pt'
-export CONZEPT_SERVICES_DIR='/var/www/html.pt/services'
+export CONZEPT_WEB_DIR='/var/www/html'
+export CONZEPT_SERVICES_DIR='/var/www/html/services'
 export CONZEPT_VERSION='0.51.466'
 export CONZEPT_INDICATORS_VERSION='0.225'
 export CONZEPT_FONT='Hind'
