--- a/settings.conf.example
+++ b/settings.conf.example
@@ -5,6 +5,7 @@ export CONZEPT_WEB_DIR='/var/www/html'
 export CONZEPT_SERVICES_DIR='/var/www/html/services'
 export CONZEPT_VERSION='0.51.466'
 export CONZEPT_INDICATORS_VERSION='0.225'
+export CONZEPT_STAGING='0' # Set to 1 to avoid hitting CertBot request-limits
 export CONZEPT_FONT='Hind'
 export CONZEPT_CORS_PROXY_WHITELIST='upload.wikimedia.org, commons.wikimedia.org, commons.m.wikimedia.org, maps.wikimedia.org'
 export CONZEPT_LOCALES='ar, ceb, de, en, es, fr, hi, it, ja, nl, pt, ru, sv, zh, uk, bn, id, ur, mr, te, tr, ta, ko, vi, ha, fa, sw, da, no, bn, ca, sr, fi, hu, cs, hr'
