use docker compose

--- a/settings.conf.example
+++ b/settings.conf.example
@@ -1,11 +1,13 @@
 export CONZEPT_HOSTNAME=''
 export CONZEPT_EMAIL=''
+
+export CONZEPT_VERSION='0.51.467'
+export CONZEPT_INDICATORS_VERSION='0.225'
+
 export CONZEPT_WEB_BASE=''
 export CONZEPT_WEB_DIR='/var/www/html'
 export CONZEPT_SERVICES_DIR='/var/www/html/services'
-export CONZEPT_VERSION='0.51.466'
-export CONZEPT_INDICATORS_VERSION='0.225'
-export CONZEPT_STAGING='0' # Set to 1 to avoid hitting CertBot request-limits
+
 export CONZEPT_FONT='Hind'
 export CONZEPT_CORS_PROXY_WHITELIST='upload.wikimedia.org, commons.wikimedia.org, commons.m.wikimedia.org, maps.wikimedia.org'
 export CONZEPT_LOCALES='ar, ceb, de, en, es, fr, hi, it, ja, nl, pt, ru, sv, zh, uk, bn, id, ur, mr, te, tr, ta, ko, vi, ha, fa, sw, da, no, bn, ca, sr, fi, hu, cs, hr'
@@ -17,3 +19,7 @@ export CONZEPT_COMMON_HTML_INCLUDE="<link href=\"${CONZEPT_WEB_BASE}/assets/font
 export CONZEPT_COMMON_HTML_INCLUDE_NO_JQUERY="<link href=\"${CONZEPT_WEB_BASE}/assets/fonts/podcastfont/css/PodcastFont.css?v202306131635\" rel=\"stylesheet\" type=\"text/css\"><link href=\"${CONZEPT_WEB_BASE}/assets/fonts/fontawesome/css/all.min.css?v6.01\" rel=\"stylesheet\" type=\"text/css\"> <link  href=\"${CONZEPT_WEB_BASE}/app/explore2/dist/css/conzept/common.css?v${CONZEPT_VERSION}\" rel=\"stylesheet\" type=\"text/css\"> <script src=\"${CONZEPT_WEB_BASE}/app/explore2/dist/core/env.js?v${CONZEPT_VERSION}\"></script><script src=\"${CONZEPT_WEB_BASE}/app/explore2/dist/core/utils.js?v${CONZEPT_VERSION}\"></script><a href=\"javascript:void(0)\" id=\"fullscreenToggle\" onclick=\"document.toggleFullscreen()\" class=\"global-actions\"><i id=\"fullscreenIcon\" title=\"fullscreen toggle\" class=\"fas fa-expand\"></i></a><script>document.toggleFullscreen = function() { if (screenfull.enabled) { screenfull.toggle(); } return 0; };</script><script src=\"${CONZEPT_WEB_BASE}/app/explore2/libs/TinyGesture.js\"></script>"
 
 export CONZEPT_TRACKER_HTML_INCLUDE=""
+
+# Dev-mode switches
+export CONZEPT_PREVENT_COVER_FETCH='false'  # Set to true to avoid fetching Wikipedia-covers during development-builds
+export CONZEPT_STAGING='false'              # Set to true to avoid hitting CertBot request-limits
