fix guide access

--- a/conf/nginx-site.conf
+++ b/conf/nginx-site.conf
@@ -17,7 +17,7 @@ server {
     # server_name localhost;
     root /var/www/html;
 
-    index index.html index.php;
+    index index.html index.php doku.php;
 
     charset utf-8;
     server_name $CONZEPT_DOMAIN;
@@ -73,11 +73,14 @@ server {
         return 403;
     }
 
-    location ^/guide {
-        rewrite ^/guide/_media/(.*) /guide/lib/exe/fetch.php?media=$1 last;
-        rewrite ^/guide/_detail/(.*) /guide/lib/exe/detail.php?media=$1 last;
-        rewrite ^/guide/_export/([^/]+)/(.*) /guide/doku.php?do=export_$1&id=$2 last;
-        rewrite ^/guide/(.*) /guide/doku.php?id=$1&$args last;
+    # see:  https://docs.nginx.com/nginx/admin-guide/web-server/web-server/#configuring-locations
+    #       https://gist.github.com/lixiangjing/5270480
+    #       https://www.dokuwiki.org/install:nginx
+    location @dokuwiki {
+       rewrite ^/guide/_media/(.*) /guide/lib/exe/fetch.php?media=$1 last;
+       rewrite ^/guide/_detail/(.*) /guide/lib/exe/detail.php?media=$1 last;
+       rewrite ^/guide/_export/([^/]+)/(.*) /guide/doku.php?do=export_$1&id=$2 last;
+       rewrite ^/guide/(.*) /guide/doku.php?id=$1 last;
     }
 
     # Default redirect to /explore
@@ -96,7 +99,7 @@ server {
     }
 
     location / {
-        try_files $uri /index.php$is_args$args;
+        try_files $uri /index.php$is_args$args @dokuwiki;
     }
 
 
