--- a/conf/nginx-site.conf
+++ b/conf/nginx-site.conf
@@ -73,14 +73,18 @@ server {
         return 403;
     }
 
-    # see:  https://docs.nginx.com/nginx/admin-guide/web-server/web-server/#configuring-locations
-    #       https://gist.github.com/lixiangjing/5270480
+    # see:
     #       https://www.dokuwiki.org/install:nginx
+    #       https://gist.github.com/lixiangjing/5270480
+    #       https://docs.nginx.com/nginx/admin-guide/web-server/web-server/#configuring-locations
     location @dokuwiki {
+
+       # FIXME: not yet working
        rewrite ^/guide/_media/(.*) /guide/lib/exe/fetch.php?media=$1 last;
        rewrite ^/guide/_detail/(.*) /guide/lib/exe/detail.php?media=$1 last;
        rewrite ^/guide/_export/([^/]+)/(.*) /guide/doku.php?do=export_$1&id=$2 last;
-       rewrite ^/guide/(.*) /guide/doku.php?id=$1 last;
+
+       rewrite ^/guide/(.*) /guide/doku.php?id=$1&$args last;
     }
 
     # Default redirect to /explore
