update Wikidata fields

--- a/.gitignore
+++ b/.gitignore
@@ -5,3 +5,6 @@ conzept-docker/
 node_modules
 data/certbot
 guide/data/cache/**/*
+app/explore2/_next
+app/explore2/src/core/env.js
+app/explore2/tools/json-proxy.json
