--- a/guide/lib/tpl/readthedokus/style.ini
+++ b/guide/lib/tpl/readthedokus/style.ini
@@ -36,11 +36,11 @@ __border__								= "#e1e4e5"		; @ini_border
 __highlight__							= "#ff9"		; @ini_highlight
 __link__								= "#2980B9"		; @ini_link
 __text_theme__							= "#fcfcfc"		; @ini_text_theme
-__background_theme__                  	= "#2980b9"		; @ini_background_theme
+__background_theme__                  	= "#0a3f62"		; @ini_background_theme
 __text_sidebar__						= "#d9d9d9"		; @ini_text_sidebar
 __background_sidebar__					= "#343131"		; @ini_background_sidebar
 __background_sidebar_hover__			= "#4e4a4a"		; @ini_background_sidebar_hover
-__text_sidebar_caption__				= "#55a5d9"		; @ini_text_sidebar_caption
+__text_sidebar_caption__				= "#000"		; @ini_text_sidebar_caption
 __text_sidebar_toc__					= "#404040"		; @ini_text_sidebar_toc
 __background_sidebar_toc__				= "#edf0f2"		; @ini_background_sidebar_toc
 __background_sidebar_toc_hover__		= "#d6d6d6"		; @ini_background_sidebar_toc_hover
@@ -57,7 +57,7 @@ __text_button__							= "#404040"		; @ini_text_button
 __background_button__					= "#f3f6f6"		; @ini_background_button
 __text_button_hover__					= "#404040"		; @ini_text_button_hover
 __background_button_hover__				= "#e5ebeb"		; @ini_background_button_hover
-__border_edit_highlight__				= "#2980b9"		; @ini_border_edit_highlight
+__border_edit_highlight__				= "#0a3f62"		; @ini_border_edit_highlight
 __background_edit_highlight1__			= "#CAE9FF"		; @ini_background_edit_highlight1
 __background_edit_highlight2__			= "#E7F8FC"		; @ini_background_edit_highlight2
 __width_site__							= "100%"		; @ini_site_width
