--- a/app/molview/package.json
+++ b/app/molview/package.json
@@ -17,5 +17,8 @@
 		"grunt-contrib-watch": "^1.1.0",
 		"grunt-svgmin": "^5.0.0",
 		"grunt-text-replace": "^0.4.0"
+	},
+	"dependencies": {
+		"grunt-cli": "^1.4.3"
 	}
 }
