not local dev issue

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -22,6 +22,7 @@ services:
       - ./data/certbot/www:/var/www/certbot
 
       # only use these mappings during local development (never commit!):
+      # FIXME: not yet producing a working build.
       #- app:/var/www/html/app
       #- /var/www/html/app/explore2/node_modules
 
