docker wiki images

--- a/conf/nginx-site.conf
+++ b/conf/nginx-site.conf
@@ -84,7 +84,9 @@ server {
        rewrite ^/guide/_detail/(.*) /guide/lib/exe/detail.php?media=$1 last;
        rewrite ^/guide/_export/([^/]+)/(.*) /guide/doku.php?do=export_$1&id=$2 last;
 
+       # Working:
        rewrite ^/guide/(.*) /guide/doku.php?id=$1&$args last;
+
     }
 
     # Default redirect to /explore
