--- a/app/quiz/choice/package.json
+++ b/app/quiz/choice/package.json
@@ -1,11 +1,11 @@
 {
-  "name": "painters",
+  "name": "quiz-choice",
   "private": true,
   "version": "0.0.0",
   "type": "module",
   "scripts": {
     "dev": "vite",
-    "build": "vite build",
+    "build": "vite build && cp ../../explore2/node_modules/openseadragon/build/openseadragon/images/* dist/",
     "preview": "vite preview"
   },
   "devDependencies": {
