fix lightbox in apps, dokuwiki test

--- a/conf/nginx-site.conf
+++ b/conf/nginx-site.conf
@@ -80,8 +80,8 @@ server {
     location @dokuwiki {
 
        # FIXME: not yet working
-       rewrite ^/guide/_media/(.*) /guide/lib/exe/fetch.php?media=$1 last;
-       rewrite ^/guide/_detail/(.*) /guide/lib/exe/detail.php?media=$1 last;
+       rewrite ^/guide/_media/(.*)?(.*) /guide/lib/exe/fetch.php?media=$1?$2 last;
+       rewrite ^/guide/_detail/(.*)?(.*) /guide/lib/exe/detail.php?media=$1?$2 last;
        rewrite ^/guide/_export/([^/]+)/(.*) /guide/doku.php?do=export_$1&id=$2 last;
 
        # Working:
