--- a/conf/nginx-site.conf
+++ b/conf/nginx-site.conf
@@ -73,7 +73,7 @@ server {
         return 403;
     }
 
-    location ~ ^/guide/ ) {
+    location ~ ^/guide(.*)$ {
 
        # FIXME: not yet working
        rewrite ^/guide/_media/(.*)?(.*) /guide/lib/exe/fetch.php?media=$1?$2 last;
