--- a/conf/nginx-site.conf
+++ b/conf/nginx-site.conf
@@ -53,8 +53,8 @@ server {
     # mime types for fonts and other resources
 
     # Cache control
-    location ~* \.(woff|woff2|ttf|otf|eot|ico|png|jpg|gif|svg|css|js|json)$ {
-        expires 30d;
+    location ~* \.(woff|woff2|ttf|otf|eot|css|js|wasm|json|ico|jpg|jpeg|png|gif|svg|gltf|glb)$ {
+        expires 90d;
         add_header Vary Accept-Encoding;
     }
 
@@ -137,11 +137,6 @@ server {
         proxy_set_header Host $host;
         proxy_set_header X-Real-IP $remote_addr;
         proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
-    }
-
-    # Cache images
-    location ~* .(jpg|jpeg|png|gif|ico|css|js|ttf|svg)$ {
-      expires 365d;
     }
 
     # Pass the PHP scripts to FastCGI server listening on 127.0.0.1:9000
