--- a/conf/supervisord.conf
+++ b/conf/supervisord.conf
@@ -1,6 +1,6 @@
 [supervisord]
-logfile=/dev/null             ; (main log file;default $CWD/supervisord.log)
-logfile_maxbytes=0            ; (max main logfile bytes b4 rotation;default 50MB)
+logfile=/tmp/supervisord.log  ; (main log file;default $CWD/supervisord.log)
+logfile_maxbytes=1000000      ; (max main logfile bytes b4 rotation;default 50MB)
 logfile_backups=0             ; (num of main logfile rotation backups;default 10)
 loglevel=info                 ; (log level;default info; others: debug,warn,trace)
 pidfile=/tmp/supervisord.pid  ; (supervisord pidfile;default supervisord.pid)
@@ -23,8 +23,8 @@ serverurl=unix:///var/run/supervisor.sock ; use a unix:// URL  for a unix socket
 command=/usr/sbin/nginx
 stdout_events_enabled=true
 stderr_events_enabled=true
-stdout_logfile_maxbytes=0
-stderr_logfile_maxbytes=0
+stdout_logfile_maxbytes=100000
+stderr_logfile_maxbytes=100000
 stdout_logfile=/dev/stdout
 stderr_logfile=/dev/stderr
 
@@ -33,8 +33,8 @@ command=/usr/sbin/php-fpm7 -c /etc/php7/fpm/pool.d/www.conf
 catch_workers_output = Yes
 stdout_events_enabled=true
 stderr_events_enabled=true
-stdout_logfile_maxbytes=0
-stderr_logfile_maxbytes=0
+stdout_logfile_maxbytes=100000
+stderr_logfile_maxbytes=100000
 stdout_logfile=/dev/stdout
 stderr_logfile=/dev/stderr
 
@@ -45,8 +45,8 @@ command=/bin/sh -c '%(ENV_CONZEPT_SERVICES_DIR)s/json-proxy/bin/json-proxy -p 50
 catch_workers_output = Yes
 stdout_events_enabled=true
 stderr_events_enabled=true
-stdout_logfile_maxbytes=0
-stderr_logfile_maxbytes=0
+stdout_logfile_maxbytes=100000
+stderr_logfile_maxbytes=100000
 stdout_logfile=/dev/stdout
 stderr_logfile=/dev/stderr
 
