--- a/conf/nginx-site.conf
+++ b/conf/nginx-site.conf
@@ -73,15 +73,6 @@ server {
         return 403;
     }
 
-    location ~ ^/guide/_media/(.*)$ {
-
-       # FIXME: not yet working
-       rewrite ^/guide/_media/(.*)?(.*) /guide/lib/exe/fetch.php?media=$1?$2 last;
-       #rewrite ^/guide/_detail/(.*)?(.*) /guide/lib/exe/detail.php?media=$1?$2 last;
-       #rewrite ^/guide/_export/([^/]+)/(.*) /guide/doku.php?do=export_$1&id=$2 last;
-
-    }
-
     # see:
     #       https://www.dokuwiki.org/install:nginx
     #       https://gist.github.com/lixiangjing/5270480
@@ -159,6 +150,15 @@ server {
 
     location ~ /\.ht {
         deny all;
+    }
+
+    location ~ ^/guide/_media/(.*)$ {
+
+       # FIXME: not yet working
+       rewrite ^/guide/_media/(.*)?(.*) /guide/lib/exe/fetch.php?media=$1?$2 last;
+       rewrite ^/guide/_detail/(.*)?(.*) /guide/lib/exe/detail.php?media=$1?$2 last;
+       rewrite ^/guide/_export/([^/]+)/(.*) /guide/doku.php?do=export_$1&id=$2 last;
+
     }
 
 }
