--- a/conf/nginx-site.conf
+++ b/conf/nginx-site.conf
@@ -79,6 +79,11 @@ server {
     #       https://docs.nginx.com/nginx/admin-guide/web-server/web-server/#configuring-locations
     location @dokuwiki {
 
+       # FIXME: not yet working
+       rewrite ^/guide/_media/(.*)?(.*) /guide/lib/exe/fetch.php?media=$1?$2 last;
+       rewrite ^/guide/_detail/(.*)?(.*) /guide/lib/exe/detail.php?media=$1?$2 last;
+       rewrite ^/guide/_export/([^/]+)/(.*) /guide/doku.php?do=export_$1&id=$2 last;
+
        # Working:
        rewrite ^/guide/(.*) /guide/doku.php?id=$1&$args last;
 
@@ -100,7 +105,8 @@ server {
     }
 
     location / {
-        try_files $uri /index.php$is_args$args @dokuwiki;
+        try_files @dokuwiki $uri /index.php$is_args$args;
+        #try_files $uri /index.php$is_args$args @dokuwiki;
     }
 
     location /app/ {
@@ -152,13 +158,13 @@ server {
         deny all;
     }
 
-    location ~ ^/guide/_media/(.*)$ {
+    #location ~ ^/guide/_media/(.*)$ {
 
        # FIXME: not yet working
-       rewrite ^/guide/_media/(.*)?(.*) /guide/lib/exe/fetch.php?media=$1?$2 last;
-       rewrite ^/guide/_detail/(.*)?(.*) /guide/lib/exe/detail.php?media=$1?$2 last;
-       rewrite ^/guide/_export/([^/]+)/(.*) /guide/doku.php?do=export_$1&id=$2 last;
+       #rewrite ^/guide/_media/(.*)?(.*) /guide/lib/exe/fetch.php?media=$1?$2 last;
+       #rewrite ^/guide/_detail/(.*)?(.*) /guide/lib/exe/detail.php?media=$1?$2 last;
+       #rewrite ^/guide/_export/([^/]+)/(.*) /guide/doku.php?do=export_$1&id=$2 last;
 
-    }
+    #}
 
 }
