--- a/conf/nginx-site.conf
+++ b/conf/nginx-site.conf
@@ -105,8 +105,7 @@ server {
     }
 
     location / {
-        try_files @dokuwiki $uri /index.php$is_args$args;
-        #try_files $uri /index.php$is_args$args @dokuwiki;
+        try_files $uri /index.php$is_args$args @dokuwiki;
     }
 
     location /app/ {
