--- a/conf/php-fpm-pool.conf
+++ b/conf/php-fpm-pool.conf
@@ -11,9 +11,9 @@ pm.max_requests = 500
 chdir = /
 
 catch_workers_output = yes
-access.log = /var/log/nginx/access.log
+access.log = /dev/stdout
 
 [global]
 daemonize = no
-error.log = /var/log/nginx/error.log
+error_log = /dev/stderr
 pid = /tmp/php-fpm.pid
