--- a/.gitignore
+++ b/.gitignore
@@ -9,6 +9,7 @@ app/explore2/_next
 app/explore2/src/core/env.js
 app/explore2/tools/json-proxy.json
 app/radio/
+app/iiif-ng/
 app/iptv*
 app/citation/
 presentations
