--- a/app/explore2/package.json
+++ b/app/explore2/package.json
@@ -56,6 +56,7 @@
     "marked": "^11.0.0",
     "numbro": "^2.4.0",
     "openseadragon": "^4.1.0",
+    "proj4": "^2.11.0",
     "reveal.js": "^5.0.2",
     "reveal.js-tableofcontents": "^1.0.1",
     "select2": "^4.1.0-rc.0",
