--- a/conf/nginx-site.conf
+++ b/conf/nginx-site.conf
@@ -53,7 +53,7 @@ server {
     # mime types for fonts and other resources
 
     # Cache control
-    location ~* \.(woff|woff2|ttf|otf|eot|css|js|wasm|json|ico|jpg|jpeg|png|gif|svg|csv|gltf|glb)$ {
+    location ~* \.(woff|woff2|ttf|otf|eot|css|js|wasm|json|ico|jpg|jpeg|png|gif|svg|gltf|glb)$ {
         expires 90d;
         add_header Vary Accept-Encoding;
     }
@@ -66,8 +66,7 @@ server {
     gzip_comp_level 6;
     gzip_buffers 16 8k;
     gzip_http_version 1.1;
-    gzip_types text/html text/css text/csv text/plain text/xml text/x-component text/javascript application/x-javascript application/javascript application/json application/manifest+json application/vnd.api+json application/xhtml+xml application/xml application/xhtml+xml application/xml+rss application/xml+atom application/rss+xml application/atom+xml application/vnd.ms-fontobject application/x-font-ttf application/x-font-opentype application/x-font-truetype image/svg+xml image/x-icon image/vnd.microsoft.icon font/ttf font/eot font/otf font/opentype
-
+    gzip_types text/css text/plain text/javascript application/javascript application/json application/x-javascript application/xml application/xml+rss application/xhtml+xml application/x-font-ttf application/x-font-opentype application/vnd.ms-fontobject image/svg+xml image/x-icon application/rss+xml application/atom_xml;
 
     # Block /services access
     location /services {
