--- a/app/explore2/package.json
+++ b/app/explore2/package.json
@@ -40,6 +40,7 @@
     "banana-i18n": "^2.3.1",
     "compromise": "^14.4.2",
     "country-select-js": "^2.1.0",
+    "esbuild": "^0.21.5",
     "immortal-db": "^1.1.0",
     "jqtree": "^1.6.1",
     "jquery": "^3.7.1",
