--- a/app/explore2/settings.example.conf
+++ b/app/explore2/settings.example.conf
@@ -13,6 +13,7 @@ export CONZEPT_AI_TUTORS='auto-select, default, advisor-related-websites, adviso
 export CONZEPT_YOUTUBE_API_KEY=''
 export CONZEPT_MARGINALIA_API_KEY=''
 export CONZEPT_SMITHSONIAN_API_KEY=''
+export CONZEPT_COURTLISTENER_API_KEY=''
 
 export CONZEPT_COMMON_HTML_INCLUDE="<link href=\"${CONZEPT_WEB_BASE}/assets/fonts/podcastfont/css/PodcastFont.css?v202306131635\" rel=\"stylesheet\" type=\"text/css\"><link href=\"${CONZEPT_WEB_BASE}/assets/fonts/fontawesome/css/all.min.css?v6.5.1\" rel=\"stylesheet\" type=\"text/css\"><link  href=\"${CONZEPT_WEB_BASE}/app/explore2/dist/css/conzept/common.css?v${CONZEPT_VERSION}\" rel=\"stylesheet\" type=\"text/css\"> <script src=\"${CONZEPT_WEB_BASE}/app/explore2/dist/core/env.js?v${CONZEPT_VERSION}\"></script><script src=\"${CONZEPT_WEB_BASE}/app/explore2/dist/core/utils.js?v${CONZEPT_VERSION}\"></script><script src=\"${CONZEPT_WEB_BASE}/app/explore2/node_modules/jquery/dist/jquery.min.js?v3.6.0\"></script><a href=\"javascript:void(0)\" id=\"fullscreenToggle\" onclick=\"document.toggleFullscreen()\" class=\"global-actions\"><i id=\"fullscreenIcon\" title=\"fullscreen toggle\" class=\"fas fa-expand\"></i></a><script>document.toggleFullscreen = function() { if (screenfull.enabled) { screenfull.toggle(); } return 0; };</script><script src=\"${CONZEPT_WEB_BASE}/app/explore2/libs/TinyGesture.js\"></script>"
 
